[gd_scene load_steps=9 format=3 uid="uid://b7ldv5ig6uv0j"]

[ext_resource type="Script" uid="uid://cpvsrymxufng8" path="res://Arbol de escenas/menu/Menu.gd" id="1_td47i"]
[ext_resource type="Texture2D" uid="uid://1wbry6sl86nn" path="res://Menu pic.jpg" id="2_my6vp"]
[ext_resource type="PackedScene" uid="uid://ddlhr5ejcchpf" path="res://Arbol de escenas/oficina/monitor/estatica.tscn" id="6_ps6j3"]
[ext_resource type="Texture2D" uid="uid://d4lgocler1taj" path="res://Arbol de escenas/menu/asets/1-MAIN_TEXT/SET_.png" id="16_mmbl3"]
[ext_resource type="AudioStream" uid="uid://cevahwye1lqf1" path="res://Arbol de escenas/menu/asets/darkness music.wav" id="17_rebes"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_rxnh0"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_vdkjr"]

[sub_resource type="LabelSettings" id="LabelSettings_g7lb0"]
font_size = 61

[node name="Menu" type="Node2D"]
script = ExtResource("1_td47i")

[node name="Menupic" type="Sprite2D" parent="."]
position = Vector2(579.5, 327)
scale = Vector2(0.9039062, 0.9111111)
texture = ExtResource("2_my6vp")

[node name="estatica" parent="." instance=ExtResource("6_ps6j3")]

[node name="new_game" type="Button" parent="."]
offset_left = 91.0
offset_top = 382.0
offset_right = 266.0
offset_bottom = 426.0
icon = SubResource("CompressedTexture2D_rxnh0")

[node name="Label" type="Label" parent="new_game"]
layout_mode = 0
offset_left = -4.0
offset_top = -13.0
offset_right = 252.0
offset_bottom = 55.0
theme_override_font_sizes/font_size = 40
text = "لعبة جديدة"

[node name="continue" type="Button" parent="."]
offset_left = 90.0
offset_top = 473.0
offset_right = 230.0
offset_bottom = 517.0
icon = SubResource("CompressedTexture2D_vdkjr")

[node name="Label" type="Label" parent="continue"]
layout_mode = 0
offset_left = 13.0
offset_top = -14.0
offset_right = 269.0
offset_bottom = 54.0
theme_override_font_sizes/font_size = 40
text = "الخروج"

[node name="Set" type="Sprite2D" parent="."]
visible = false
position = Vector2(38, 412)
texture = ExtResource("16_mmbl3")

[node name="Set2" type="Sprite2D" parent="."]
visible = false
position = Vector2(40, 497)
texture = ExtResource("16_mmbl3")

[node name="Label" type="Label" parent="."]
offset_left = 46.0
offset_top = 45.0
offset_right = 346.0
offset_bottom = 306.0
text = "5 Nights
At  
Freddy"
label_settings = SubResource("LabelSettings_g7lb0")

[node name="tiempo" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_rebes")
autoplay = true

[connection signal="mouse_entered" from="new_game" to="." method="_on_new_game_mouse_entered"]
[connection signal="mouse_exited" from="new_game" to="." method="_on_new_game_mouse_exited"]
[connection signal="pressed" from="new_game" to="." method="_on_new_game_pressed"]
[connection signal="mouse_entered" from="continue" to="." method="_on_continue_mouse_entered"]
[connection signal="mouse_exited" from="continue" to="." method="_on_continue_mouse_exited"]
[connection signal="pressed" from="continue" to="." method="_on_continue_pressed"]
[connection signal="timeout" from="tiempo" to="." method="_on_tiempo_timeout"]
